@startuml
'https://plantuml.com/class-diagram


class MutationTestingPipeline {
    + metrics
    + test(model, dataframe, protected_attributes, metrics, operators)
}

abstract class Operator #D0F1FA{
    + dataframe
    + compute_mutation()
}

abstract class Model #FEA29C{
    + predict(dataframes)
}

abstract class Metric {
    + compute_metric(predictions, y_real)
}

class MutantGenerator {
    + operators
    + generate_mutant_dataset(dataframe)
}

class TensorflowModel #FE5F55{
    + predict(dataframes)
}

class SKLearnModel #FE5F55{
    + predict(dataframes)
}

class ColumnShuffle #7EE8FA{
    + shuffle_ratio
    + compute_mutation(dataframe)
}

class Redistribution #7EE8FA{
    + compute_mutation(dataframe)
}

class ColumnDropping #7EE8FA{
    + compute_mutation(dataframe)
}

class MutantDuplicate #7EE8FA{
    + duplicate_ratio
    + compute_mutation(dataframe)
}

MutationTestingPipeline -l-> Model
MutationTestingPipeline -u-> Metric

SKLearnModel --|> Model
TensorflowModel -u-|> Model

ColumnShuffle -|> Operator
Redistribution -u-|> Operator
ColumnDropping -u-|> Operator
MutantDuplicate -u-|> Operator

MutantGenerator --> Operator

MutationTestingPipeline -d-> MutantGenerator

@enduml